Fix resizing of team page so profiles wrap nicely
Changed bootstrap grid size to allow the number of profiles per row
to scale nicely based on screen width, instead of immediately changing
to only one per row - replaced md columns with sm ones

--- a/css/team.css
+++ b/css/team.css
@@ -7,6 +7,8 @@
 }
 
 .members__info {
+	display: block;
+	float: left;
 	padding-top: 1.5rem;
 	padding-left: 1.5rem;
 	padding-right: 1rem;
